# maximize-your-claude-code-programming-productivity-9332041

./: .gitignore  README.md  calendar.html  calendar_claude.html
claudeType/: KeyQuest.html  app.jsx  components.jsx  data.jsx  icons.jsx  screen-dashboard.jsx  screen-home.jsx  screen-player-select.jsx  screen-results.jsx  screen-settings.jsx  screen-typing.jsx  styles.css
data/: .env.example  .gitignore  README.md  pyproject.toml
data/notebooks/: build_billboard_pitch.mjs  package-lock.json  package.json  taxi_analysis.ipynb
data/notebooks/output/: billboard_pitch.pptx  pitch_data.json  taxi_2022_pivot.xlsx  ~$billboard_pitch.pptx  ~$taxi_2022_pivot.xlsx
elevator/: CLAUDE.md  elevator.py  elevator_v2.py
elevatorTDD/: .dockerignore  CLAUDE.md  Dockerfile  Ideas.md  datadog-agent.yaml  elevator.py  pytest.ini
receipts/: categorize.py  process_batch.py  visualize_spending.py
spec/: CLAUDE.md  pyproject.toml  typingGamePRD.md
spec/.claude/skills/spec-author/: SKILL.md
spec/.claude/skills/spec-author/references/: Relevant-Standards.md
spec/app/: main.py  server.py
spec/keyquest/: achievements.jsx  app.jsx  components.jsx  data.jsx  engine.jsx  icons.jsx  index.html  screen-dashboard.jsx  screen-home.jsx  screen-player-select.jsx  screen-results.jsx  screen-settings.jsx  screen-typing.jsx  storage.jsx  styles.css  tweaks-panel.jsx
spec/specifications/: Architecture-Decisions.md  Functional.md  Non-Functional.md  Relevant-Standards.md
spec/tests/: test_welcome.py
typingApp/: .gitignore  CLAUDE.md  api.js  game.js  index.html  passages.js  passages2.js  (+3 more)
(+45 files in other folders)
