[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "markitdown[pptx]>=0.1.5",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pypdfium2>=5.8.0",
    "python-dotenv>=1.2.2",
]
